--- a/index.html
+++ b/index.html
@@ -1,39 +1,8 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/gameicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>indiesite</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-
-    <!-- Favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/gameicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/gameicon-16x16.png"
-    />
-
-    <!-- iOS ホーム画面用 -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>indiesite</title>
   </head>
