アイコン追加

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/gameicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="gameicon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="gameicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="gameicon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>indiesite</title>
   </head>
